[feat][broker] PIP-398: Subscription replication on the namespace and topic levels (#29)
# Conflicts:
#	pulsar-client-admin-api/src/main/java/org/apache/pulsar/client/admin/TopicPolicies.java
#	pulsar-client-admin/src/main/java/org/apache/pulsar/client/admin/internal/TopicPoliciesImpl.java
#	pulsar-client-tools/src/main/java/org/apache/pulsar/admin/cli/CmdTopicPolicies.java
#	pulsar-common/src/main/java/org/apache/pulsar/common/policies/data/HierarchyTopicPolicies.java
#	pulsar-common/src/main/java/org/apache/pulsar/common/policies/data/TopicPolicies.java